<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout tools:context=".Actividades.MainActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/linear"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tvResultado"
        android:textSize="24sp"
        android:textColor="#050505"
        android:layout_marginTop="100dp"/>

    <!--
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tvResultadoLuz"
        android:textSize="24sp"
        android:textColor="#050505"
        android:layout_marginTop="10dp"/>
    -->

    <!--
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tvResultadoAcelerometro"
        android:textSize="24sp"
        android:textColor="#050505"
        android:layout_marginTop="10dp"/>
        -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonStart" />

        <Button
            android:id="@+id/ButtonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/ButtonStop" />
    </RelativeLayout>

    <Button
        android:id="@+id/ButtonCuestionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonCuestionario"
        android:layout_marginTop="50dp"
        android:textColor="#070707"
        app:backgroundTint="#CACACA" />
</LinearLayout>

